k8s/labs/day53/manifests/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass

metadata:
  name: nginx

spec:
  controller: k8s.io/ingress-nginx
