k8s/labs/day53/manifests/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: ingress-nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 31080
  - name: https
    port: 443
    targetPort: 443
    nodePort: 31443
